Address third code review: private utility-class constructors, null-guard violations, resizable tags list
Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>